fixed module-config for integration-tests