@@ -71,11 +71,14 @@
         <plugins>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <argLine>@{argLine} --add-opens
+                        io.redlink.geocoding.osm/io.redlink.geocoding.nominatim=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
                 <configuration>
                     <argLine>@{argLine} --add-opens
                         io.redlink.geocoding.osm/io.redlink.geocoding.nominatim=ALL-UNNAMED
